--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,6 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+  "rewrites": [
+    { "source": "/public", "destination": "/public" },
+    { "source": "/(.*)", "destination": "/" }
+  ]
 }
